[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-pytorch-kmeans>=0.2.2",
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]
